[project]
name = "cslrtools-fluentsigners50"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ikeda", email = "ikeda@lee-lab.org" }
]
requires-python = ">=3.11"
dependencies = [
    "argparse-class-namespace @ git+https://github.com/plumiume/argparse-class-namespace.git",
    "cslrtools @ gith+https://github.com/plumiume/cslrtools.git",
    "halo>=0.0.31",
    "numpy>=2.3.0",
    "parse>=1.20.2",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
cslrtools-fluentsigners50 = "cslrtools_fluentsigners50.__main__:main"

[project.optional-dependencies]
lightning = [
    "cslrtools[lightning]",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "cslrtools[lightning]",
]
